--- a/frontend/src/chat/components/chat.css
+++ b/frontend/src/chat/components/chat.css
@@ -8,10 +8,14 @@
 
 .bg-primary {
         background-color: #287094!important;
-        font-size: 18px;
+        font-size: 20px !important;
+        max-width: 1000px !important;
 }
 
 
 .msgofother {
-        font-size: 18px;
+        font-size: 20px !important;
+        max-width: 1000px !important;
+        background-color: aliceblue !important;
+
 }
