--- a/frontend/src/components/ImageUpload.css
+++ b/frontend/src/components/ImageUpload.css
@@ -144,7 +144,7 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(248, 249, 250);
+  background-color: white;
   overflow-x: hidden;
   
 }
@@ -344,9 +344,13 @@ img.medium {
   background-color: white;
   margin: 1rem;
   cursor: pointer;
-  width: 240px;
+  width: 290px;
 
   
+}
+
+.card:hover{
+  background-color: #fff0f0;
 }
 .card-body {
   padding: 1rem;
@@ -921,4 +925,16 @@ button:hover{
 .this-active {
   background: #abcbff !important;
   border-radius: 5px !important;
+}
+
+.center-certificate {
+  margin: auto;
+  width: 990px;
+  height: 750px;
+
+
+}
+
+.smile {
+  font-size: 60px !important;
 }
